fixing display on mobile

--- a/styles.css
+++ b/styles.css
@@ -562,7 +562,7 @@ form {
     gap: 40px;
   }
 
-  .setting-popup {
+  .setting-popup-content {
     width: 200px;
   }
 
